test/should_pass/basic_052.grg
actions basic_052 using basic_model_001;

rule r {
	pattern {
		x : A;
		y : B;
		z : C;
	}
	replace {
		b : B;
	}
}

