test/should_fail/inh_003.grg
actions inh_003 using inh_model_003;

rule bla { pattern{} replace{} }
